--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,12 @@ services:
   owncloud:
     image: owncloud
     ports:
-      - 8080:80
+      - '8080:80'
+    links:
+      - mysql
   mysql:
     image: mariadb
     environment:
       MYSQL_ROOT_PASSWORD: example
+    expose:
+      - '3306'
