cannot seem to connect owncloud with mariadb yet

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,8 @@ services:
     links:
       - mysql
   mysql:
-    image: mariadb
-    environment:
-      MYSQL_ROOT_PASSWORD: example
+    image: thegene/mariadb-with-secrets
     expose:
       - '3306'
+    volumes:
+      - ${SECRETS_HOST_PATH}:/secrets
