Installs s3 cli to maria-db-with-secrets

--- a/db/Dockerfile
+++ b/db/Dockerfile
@@ -5,5 +5,13 @@ MAINTAINER Eugene Westbrook
 COPY secrets-entrypoint.sh /secrets-entrypoint.sh
 RUN chmod +x /secrets-entrypoint.sh
 
+# install aws cli
+RUN apt-get update \
+  && apt-get install -y python-software-properties curl unzip \
+  && curl "https://s3.amazonaws.com/aws-cli/awscli-bundle.zip" \
+    -o "awscli-bundle.zip" \
+  && unzip awscli-bundle.zip \
+  && ./awscli-bundle/install -b /bin/aws
+
 ENTRYPOINT ["/secrets-entrypoint.sh"]
 CMD ["mysqld"]
