Don't have a value for SYNC in prod compose file

--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -39,9 +39,10 @@ services:
     volumes:
       - /backup-server/storage/data:/source
       - /backup-server/backup/data:/target
+      - ./sync:/scripts
     entrypoint: /scripts/sync.sh
     environment:
-      - SYNC=false # switch to run deliberately
+      - SYNC
 
 volumes:
   secrets:
